--- a/WpfForPrism/App.xaml
+++ b/WpfForPrism/App.xaml
@@ -1,9 +1,9 @@
-﻿<Application x:Class="WpfForPrism.App"
+﻿<prism:PrismApplication x:Class="WpfForPrism.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:WpfForPrism"
-             StartupUri="MainWindow.xaml">
+             xmlns:prism="http://prismlibrary.com/"
+             >
     <Application.Resources>
-         
     </Application.Resources>
-</Application>
+</prism:PrismApplication>
