--- a/WpfForPrism/Views/MainWindow.xaml
+++ b/WpfForPrism/Views/MainWindow.xaml
@@ -15,9 +15,9 @@
         </Grid.RowDefinitions>
 
         <StackPanel Orientation="Horizontal" Grid.Row="0">
-            <Button Content="模塊A" Width="80" Height="30" Command="{Binding ShowContentCmm }" CommandParameter="UCA"></Button>
-            <Button Content="模塊B" Width="80" Height="30" Command="{Binding ShowContentCmm }" CommandParameter="UCB"></Button>
-            <Button Content="模塊C" Width="80" Height="30" Command="{Binding ShowContentCmm }" CommandParameter="UCC"></Button>
+            <Button Content="區域A" Width="80" Height="30" Command="{Binding ShowContentCmm }" CommandParameter="UCA"></Button>
+            <Button Content="區域B" Width="80" Height="30" Command="{Binding ShowContentCmm }" CommandParameter="UCB"></Button>
+            <Button Content="區域C" Width="80" Height="30" Command="{Binding ShowContentCmm }" CommandParameter="UCC"></Button>
         </StackPanel>
 
         <ContentControl Grid.Row="1" prism:RegionManager.RegionName="ContentRegion"></ContentControl>
