--- a/ModuleA/Views/ViewA.xaml
+++ b/ModuleA/Views/ViewA.xaml
@@ -7,6 +7,6 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <TextBlock Text="我是模塊A"></TextBlock>
+        <TextBlock Text="我是模塊A" FontSize="100"></TextBlock>
     </Grid>
 </UserControl>
