--- a/ModuleB/Views/ViewB.xaml
+++ b/ModuleB/Views/ViewB.xaml
@@ -7,6 +7,6 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <TextBlock Text="我是模塊A"></TextBlock>
+        <TextBlock Text="我是模塊B" FontSize="100"></TextBlock>
     </Grid>
 </UserControl>
