--- a/ModuleA/Views/ViewA.xaml
+++ b/ModuleA/Views/ViewA.xaml
@@ -4,9 +4,10 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ModuleA.Views"
+             xmlns:prism="http://prismlibrary.com/"           
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <TextBlock Text="我是模塊A" FontSize="100"></TextBlock>
+        <TextBlock Text="{Binding Msg}" FontSize="100"></TextBlock>
     </Grid>
 </UserControl>
