--- a/WpfForPrism/Views/MainWindow.xaml
+++ b/WpfForPrism/Views/MainWindow.xaml
@@ -10,7 +10,7 @@
         Title="MainWindow" Height="450" Width="800">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="30"/>
+            <RowDefinition Height="30" />
             <RowDefinition />
         </Grid.RowDefinitions>
 
@@ -18,6 +18,7 @@
             <Button Content="模塊A" Width="80" Height="30" Command="{Binding ShowContentCmm }" CommandParameter="ViewA"></Button>
             <Button Content="模塊B" Width="80" Height="30" Command="{Binding ShowContentCmm }" CommandParameter="ViewB"></Button>
             <Button Content="後退" Width="80" Height="30" Command="{Binding BackCmm }"></Button>
+            <Button Content="打開對話框" Width="80" Height="30" Command="{Binding DialogCmm }" CommandParameter="ViewC"></Button>
         </StackPanel>
 
         <ContentControl Grid.Row="1" prism:RegionManager.RegionName="ContentRegion"></ContentControl>
